# community-matchbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_SETUP.md  Dockerfile  GEMINI.md  PRIVACY.md  README.md  TERMS.md  activate.sh  alembic.ini  docker-compose.yml  entrypoint.sh  fly.reddit-poller.toml  fly.toml  pyproject.toml
.claude/: settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
conductor/: taxonomy-updates.md
config/: sources.yaml  taxonomy.yaml
docs/: BRIEFING_BOOK.md  COMMUNITY_DASHBOARD_PRD.md  COMMUNITY_DISCUSSION_ONE_PAGER.md  MODERATOR_UI_SPEC.md  MODERATOR_UI_SPEC_v2.md  MOD_API_REFERENCE.md  PLATFORM_SETUP.md  STRATEGY.md  TESTING.md  facebook-backfill-plan.md  mod-api-matches.md
legacy/: FLY_DEPLOY.md  fly.reddit-poller.toml
scripts/: analyze_fb_groups_prod.py  backfill.py  backfill_cron.sh  backfill_dedup.py  backfill_facebook.py  backfill_infra_roles.py  backfill_reddit_json.py  deploy_main_app.sh  deploy_reddit_poller.sh  query_db.py  run_listeners.py  run_reddit_json_listener.py  test_e2e_local.sh  test_openai_endpoint.py
tests/: conftest.py  test_backfill_reddit_json_script.py  test_cli.py  test_cli_data.py  test_db_disconnect_detection.py  test_db_engine.py  test_dedup.py  test_discord_bot.py  test_discord_raw_store.py  test_enrichment.py  test_extraction.py  test_extraction_infra.py  test_facebook_har.py  test_facebook_raw_store.py  test_facebook_webhook.py  test_keywords.py  test_lifecycle.py  test_listener_supervisor.py  test_mod_api.py  test_public_community.py  test_queue.py  test_raw_store.py  test_reddit_json_listener.py  test_reddit_json_raw_store.py  test_reddit_listener.py  test_reporting.py  (+7 more)
(+110 files in other folders)
